--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=71
 spring.thymeleaf.cache=false
 
 #MySql conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/proyecto?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/videojuegos?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=usuario
-spring.datasource.password=hola.
+spring.datasource.password=clave.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
@@ -14,5 +14,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
-spring.jpa.hibernate.ddl-auto=update
+
 
