--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=71
 spring.thymeleaf.cache=false
 
 #MySql conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/techshop?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/videojuegos?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=usuario_prueba
 spring.datasource.password=Usuar1o_Clave.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
